--- a/notebooks/SP-Breast_cancer.ipynb
+++ b/notebooks/SP-Breast_cancer.ipynb
@@ -1906,7 +1906,7 @@
    "id": "9a49b6f6-3b7d-401a-96c9-88f2f0c2779b",
    "metadata": {},
    "source": [
-    "As we already know that the number of neighbors affects the performance of the model. We will use the elbow method, a visual heuristic used to determine the best number of parameters, as k in KNN. \n",
+    "As we already know that the number of neighbours affects the performance of the model. We will use the elbow method (as seen in class), a visual heuristic used to determine the best number of parameters, as k in KNN. \n",
     "We plot model performance on the training set against increasing values of k, and the point where improvements begin to diminish is chosen as the best balance between performance and complexity."
    ]
   },
