Ludovic part pasted

--- a/notebooks/SP-Breast_cancer.ipynb
+++ b/notebooks/SP-Breast_cancer.ipynb
@@ -2007,7 +2007,167 @@
    "id": "07ed652b-10a3-4780-b380-f02612047280",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score, recall_score, confusion_matrix, classification_report\n",
+    "\n",
+    "# ---- Path corrected for your machine ----\n",
+    "DATA_PATH = r\"C:\\Users\\Admin\\Desktop\\wdbc.data\"\n",
+    "\n",
+    "feature_names = [\n",
+    "    \"mean_radius\",\"mean_texture\",\"mean_perimeter\",\"mean_area\",\"mean_smoothness\",\n",
+    "    \"mean_compactness\",\"mean_concavity\",\"mean_concave_points\",\"mean_symmetry\",\"mean_fractal_dimension\",\n",
+    "    \"radius_error\",\"texture_error\",\"perimeter_error\",\"area_error\",\"smoothness_error\",\n",
+    "    \"compactness_error\",\"concavity_error\",\"concave_points_error\",\"symmetry_error\",\"fractal_dimension_error\",\n",
+    "    \"worst_radius\",\"worst_texture\",\"worst_perimeter\",\"worst_area\",\"worst_smoothness\",\n",
+    "    \"worst_compactness\",\"worst_concavity\",\"worst_concave_points\",\"worst_symmetry\",\"worst_fractal_dimension\"\n",
+    "]\n",
+    "columns = [\"subject_id\", \"diagnosis\"] + feature_names\n",
+    "\n",
+    "# Safety check\n",
+    "if not os.path.exists(DATA_PATH):\n",
+    "    raise FileNotFoundError(f\"Not found: {DATA_PATH}\")\n",
+    "\n",
+    "df = pd.read_csv(DATA_PATH, header=None, names=columns)\n",
+    "\n",
+    "print(\"Dataset shape:\", df.shape)\n",
+    "df.head()\n",
+    "# ======================================================\n",
+    "# 2) Remap diagnosis (B=0 benign, M=1 malignant)\n",
+    "# ======================================================\n",
+    "df[\"diagnosis\"] = df[\"diagnosis\"].map({\"B\": 0, \"M\": 1})\n",
+    "\n",
+    "print(\"Diagnosis distribution (0=benign, 1=malignant):\")\n",
+    "print(df[\"diagnosis\"].value_counts())\n",
+    "\n",
+    "\n",
+    "# ======================================================\n",
+    "# 3) Prepare X and y\n",
+    "# ======================================================\n",
+    "X = df.drop(columns=[\"subject_id\", \"diagnosis\"])\n",
+    "y = df[\"diagnosis\"]\n",
+    "\n",
+    "\n",
+    "# ======================================================\n",
+    "# 4) Feature selection (aligned with report)\n",
+    "#    - Drop highly correlated features (abs corr > 0.90)\n",
+    "#    - Drop weak predictors vs diagnosis (abs corr < 0.05)\n",
+    "# ======================================================\n",
+    "corr_matrix = X.corr().abs()\n",
+    "upper_triangle = corr_matrix.where(np.triu(np.ones(corr_matrix.shape), k=1).astype(bool))\n",
+    "\n",
+    "high_corr_features = [\n",
+    "    col for col in upper_triangle.columns\n",
+    "    if any(upper_triangle[col] > 0.90)\n",
+    "]\n",
+    "\n",
+    "corr_with_target = X.join(y).corr(numeric_only=True)[\"diagnosis\"].drop(\"diagnosis\").abs()\n",
+    "low_corr_features = corr_with_target[corr_with_target < 0.05].index.tolist()\n",
+    "\n",
+    "features_to_drop = sorted(set(high_corr_features + low_corr_features))\n",
+    "\n",
+    "print(\"\\n--- Feature Selection ---\")\n",
+    "print(f\"Highly correlated features dropped (>0.90): {len(high_corr_features)}\")\n",
+    "print(high_corr_features)\n",
+    "print(f\"\\nLow-correlation features dropped (<0.05): {len(low_corr_features)}\")\n",
+    "print(low_corr_features)\n",
+    "print(f\"\\nTotal dropped: {len(features_to_drop)}\")\n",
+    "\n",
+    "X_selected = X.drop(columns=features_to_drop)\n",
+    "print(\"Remaining features:\", X_selected.shape[1])\n",
+    "\n",
+    "\n",
+    "# ======================================================\n",
+    "# 5) Normalisation (MinMaxScaler)\n",
+    "# ======================================================\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "X_scaled = scaler.fit_transform(X_selected)\n",
+    "\n",
+    "\n",
+    "# ======================================================\n",
+    "# 6) Train / Test split\n",
+    "# ======================================================\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X_scaled,\n",
+    "    y,\n",
+    "    test_size=0.2,\n",
+    "    random_state=42,\n",
+    "    stratify=y\n",
+    ")\n",
+    "\n",
+    "print(\"\\n--- Train/Test Split ---\")\n",
+    "print(\"Train shape:\", X_train.shape)\n",
+    "print(\"Test shape:\", X_test.shape)\n",
+    "print(\"Train diagnosis counts:\\n\", y_train.value_counts())\n",
+    "print(\"Test diagnosis counts:\\n\", y_test.value_counts())\n",
+    "\n",
+    "\n",
+    "# ======================================================\n",
+    "# 7) KNN model (for comparison)\n",
+    "# ======================================================\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score, recall_score, confusion_matrix, classification_report\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=5)\n",
+    "knn.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_knn = knn.predict(X_test)\n",
+    "\n",
+    "acc_knn = accuracy_score(y_test, y_pred_knn)\n",
+    "rec_knn = recall_score(y_test, y_pred_knn)\n",
+    "cm_knn = confusion_matrix(y_test, y_pred_knn)\n",
+    "\n",
+    "print(\"\\n================ KNN RESULTS ================\")\n",
+    "print(f\"Accuracy: {acc_knn:.4f}\")\n",
+    "print(f\"Recall:   {rec_knn:.4f}\")\n",
+    "print(\"Confusion matrix:\\n\", cm_knn)\n",
+    "print(\"\\nClassification report:\\n\", classification_report(y_test, y_pred_knn))\n",
+    "\n",
+    "\n",
+    "# ======================================================\n",
+    "# 8) Logistic Regression (YOUR PART - Step 4)\n",
+    "# ======================================================\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "log_reg = LogisticRegression(\n",
+    "    penalty=\"l2\",\n",
+    "    solver=\"liblinear\",\n",
+    "    max_iter=1000,\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "log_reg.fit(X_train, y_train)\n",
+    "y_pred_lr = log_reg.predict(X_test)\n",
+    "\n",
+    "acc_lr = accuracy_score(y_test, y_pred_lr)\n",
+    "rec_lr = recall_score(y_test, y_pred_lr)\n",
+    "cm_lr = confusion_matrix(y_test, y_pred_lr)\n",
+    "\n",
+    "print(\"\\n=========== LOGISTIC REGRESSION RESULTS ===========\")\n",
+    "print(f\"Accuracy: {acc_lr:.4f}\")\n",
+    "print(f\"Recall:   {rec_lr:.4f}\")\n",
+    "print(\"Confusion matrix:\\n\", cm_lr)\n",
+    "print(\"\\nClassification report:\\n\", classification_report(y_test, y_pred_lr))\n",
+    "\n",
+    "\n",
+    "# ======================================================\n",
+    "# 9) Final comparison summary\n",
+    "# ======================================================\n",
+    "print(\"\\n================ FINAL COMPARISON ================\")\n",
+    "print(f\"KNN  -> Accuracy: {acc_knn:.4f} | Recall: {rec_knn:.4f}\")\n",
+    "print(f\"LOGR -> Accuracy: {acc_lr:.4f} | Recall: {rec_lr:.4f}\")\n"
+   ]
   }
  ],
  "metadata": {
